change main.out into QS3.exe

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,5 +3,5 @@ if(${CMAKE_PROJECT_NAME} STREQUAL "Project")
   message(FATAL_ERROR "cmake should be executed not for 'source' subdirectory, but for the top directory of HPhi.")
 endif(${CMAKE_PROJECT_NAME} STREQUAL "Project")
 set(SOURCES main.f90 eigen_solver.f90 get_expectation_values.f90 ham2vec_v3.f90 input_param.f90 lanczos.f90 state_lists.f90)
-add_executable(main.out ${SOURCES})
-target_link_libraries(main.out ${LAPACK_LIBRARIES} m)
+add_executable(QS3.exe ${SOURCES})
+target_link_libraries(QS3.exe ${LAPACK_LIBRARIES} m)
